# slingshot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties
.github/workflows/: ci.yml
assets/: attribution.txt
assets/textures/: ball.aseprite  ground.aseprite  man.aseprite  slingshot.aseprite
core/: build.gradle
core/src/main/kotlin/io/github/notoriouseng/slingshot/: Main.kt
include/: main.h
lib/clm/: CMakeLists.txt  Readme.md
lib/clm/include/: clm.h
lib/clm/src/: clm.c
lwjgl3/: build.gradle
lwjgl3/src/main/kotlin/io/github/notoriouseng/slingshot/lwjgl3/: Lwjgl3Launcher.kt  StartupHelper.kt
scripts/: copy_assets.py
src/: main.c
web/: index.html
